# ERP_REAL_ESTATE

./: .gitignore  README.md  hooks.py  pyproject.toml
real_estate/: hooks.py
real_estate/real_estate/config/: desktop.py  real_estate.py
real_estate/real_estate/dashboard_chart/booking_trends/: booking_trends.json
real_estate/real_estate/dashboard_chart/project_revenue/: project_revenue.json
real_estate/real_estate/dashboard_chart/units_by_status/: units_by_status.json
real_estate/real_estate/doc_events/: payment_entry.py  sales_invoice.py
real_estate/real_estate/doctype/booking/: booking.json  booking.py
real_estate/real_estate/doctype/booking_installment/: booking_installment.json  booking_installment.py
real_estate/real_estate/doctype/broker/: broker.json  broker.py
real_estate/real_estate/doctype/broker_commission/: broker_commission.json  broker_commission.py
real_estate/real_estate/doctype/change_order/: change_order.json  change_order.py
real_estate/real_estate/doctype/commission_payment/: commission_payment.json  commission_payment.py
real_estate/real_estate/doctype/cost_category/: cost_category.json  cost_category.py
real_estate/real_estate/doctype/handover_check_item/: handover_check_item.json  handover_check_item.py
real_estate/real_estate/doctype/partner/: partner.json  partner.py
real_estate/real_estate/doctype/partner_share/: partner_share.json  (+1 more)
real_estate/real_estate/setup/: install.py  update_workspace.py
real_estate/real_estate/tasks/: run_tests.py  test_all.py
real_estate/real_estate/utils/: bulk_import_payments.py
(+55 files in other folders)
